# gha-devel

./: .cmake-format.yaml  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  conanfile.py  main.cpp  pyproject.toml
.github/workflows/: build-conan-deps.yml  build-dockerfile.yml  macos-ci.yml  ubuntu-ci.yml  ubuntu-ci.yml.disabled  wheels.yml  windows-ci.yml
