# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "typing_extensions",
]

build-backend = "scikit_build_core.build"

[project]
name = "devel"
version = "0.0.1"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy",
]

optional-dependencies.test = [
  "pytest>=8.0"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
  "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\)*:DeprecationWarning",  # https://github.com/pytest-dev/pytest/issues/11528
]
python_files = [
  "test/test*.py"
]
testpaths = [
  "test/"
]

[tool.cibuildwheel]
skip = ["cp313*", "*musllinux*", "pp*"]
test-command = "python -m pytest {project}/test"
test-extras = ["test"]
test-skip = ["cp313*", "*universal2", "pp*"]

# Setuptools bug causes collision between pypy and cpython artifacts
before-build = [
  "rm -rf '{project}/build'",
]
environment = { PIP_VERBOSE=1 }

# We are using static linking, thus repairing wheels is not necessary.
repair-wheel-command = ""

[tool.ruff]
extend-select = [
  "B", # flake8-bugbear
  "B904",
  "I", # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP", # pyupgrade
]
extend-ignore = [
  "E501", # Line too long
]
target-version = "py39"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
